Update circleci build command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Login to Docker
-          command: echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+          command: docker login -u $DOCKER_LOGIN -p $DOCKER_PWD
       - run:
           name: Build Hello
           command: docker build -t flask-hello hello/
