--- a/hello/Dockerfile
+++ b/hello/Dockerfile
@@ -1,4 +1,9 @@
 FROM python:3.6
+
+LABEL version="4.0"
+LABEL author="deepakputhraya"
+LABEL appname="python-hello"
+
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
