--- a/hello/Dockerfile
+++ b/hello/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.6
 LABEL version="4.0"
 LABEL author="deepakputhraya"
 LABEL appname="python-hello"
+LABEL "x.y"="z"
 
 COPY . /app
 WORKDIR /app
